# thermopro-tools

./: CONTRIBUTING.md  Cargo.toml  LICENCE  README.md
controller/: Cargo.toml
controller/src/: checksum.rs  command.rs  controller.rs  convert_commands.rs  convert_notifications.rs  device.rs  device_types.rs  generate_commands.rs  main.rs  notification.rs  peripheral.rs  receive_notifications.rs  thermopro.rs  transfer.rs  transfer_log.rs  ui-test.rs  ui.rs
controller/src/command/: set_temp_unit.rs
controller/src/commands/: mod.rs  set_temp_unit.rs
controller/src/notification/: content.rs  temperatures.rs
controller/src/notifications/: mod.rs  temperatures.rs
controller/src/ui/: convert_raw_transfer.rs  convert_transfer.rs  dialog.rs  raw_command_dialog.rs  ui_state.rs
cursive-ui/: Cargo.toml
cursive-ui/src/: controller.rs  main.rs  model.rs  peripheral.rs  ui.rs
cursive-ui/src/controller/: btleplug_device_finder.rs  default.rs  dummy_device_finder.rs
cursive-ui/src/model/: device.rs  temperatures.rs  transfer_log.rs
cursive-ui/src/peripheral/: command.rs  dummy.rs  notification.rs
cursive-ui/src/ui/: main.rs  menu.rs  receiver.rs  report_profile_dialog.rs  set_profile_dialog.rs  status_view.rs  strings.rs  transfer_log.rs  ui_command.rs  ui_request.rs  views.rs
cursive-ui/src/ui/views/: probe_select_view.rs  probe_view.rs  transfer_log_view.rs  transfer_view.rs
device-controller/: Cargo.toml
device-controller/src/: controller.rs  dev_finder.rs  lib.rs  model.rs  peripheral.rs
device-controller/src/controller/: btleplug_device_finder.rs  command_request.rs  connection_handler.rs  connection_mgr.rs  default.rs
device-controller/src/dev_finder/: btleplug_device_finder.rs  dummy_device_finder.rs
device-controller/src/model/: device.rs  device_temperature.rs  probe.rs
device-controller/src/peripheral/: btleplug.rs  command.rs  dummy.rs  interface.rs  notification.rs  transfer.rs
docs/: common-info.md  example.md  index.md  os-acknowledgements.md
docs/commands/: 0x01-setup.md  0x20-set-temp-unit.md  0x23-set-probe-profile.md  0x24-report-probe-profile.md  0x24-unknown.md  0x25-alt-temp-report.md  0x25-unknown.md  0x26-unknown.md  0x27-alarm-acknowledge.md  0x30-send-temp-report.md  0x41-unknown.md  0xe0-error.md  index.md
docs/examples/: basic-tests.md  driven-by-app.md  index.md
fake-device/: CMakeLists.txt  prj.conf
fake-device/src/: bcd.h  main.c  main.cpp  tp25.c  tp25.cpp  tp25.h  tp25_internal.h  tp25_responses.cpp  transceiver.cpp  transceiver.h
fake-device/test/: main.cpp
fake-device/test/responses/: temp_report.cpp
http-server/: Cargo.toml  README.md
http-server/src/: main.rs  state_to_json.rs
http-server/test-page/: test-page.html
src/: main.rs
tlv-check/: Cargo.toml
