[package]
name = "thermopro"
version = "0.1.0"
edition = "2021"
default-run = "thermopro"

[dependencies]
btleplug = "0.11.6"
futures = "0.3.31"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
uuid = { version = "1.11.1", features = ["v4"] }
log = "0.4.25"
bytes = "1.9.0"
bcd-convert = "0.1.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
rand = "0.9.0"

[[bin]]
name = "thermopro"
path = "src/main.rs"

[[bin]]
name = "ui-test"
path = "src/ui-test.rs"
