[package]
name = "cursive-ui"
version = "0.1.0"
edition = "2021"
default-run = "cursive-ui"
publish = false

[dependencies]
bytes = "1.10.1"
cursive = "0.21"
cursive_table_view = "0.15.0"
device_controller = { workspace = true }
log = { version = "0.4.27" }
tokio = { version = "1.47.0", features = ["full", "test-util"] }

[[bin]]
name = "cursive-ui"
path = "src/main.rs"

[features]
dummy_device = ["device_controller/dummy_device"]
