[package]
name = "device_controller"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
assert_matches = "1.5.0"
bcd-convert = "0.1.0"
btleplug = "0.11.8"
bytes = "1.10.1"
futures = "0.3.31"
log = { version = "0.4.27" }
tokio = { version = "1.47.0", features = ["full", "test-util"] }
trait-variant = "0.1.2"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
dummy_device = []
