[package]
name = "http-server"
version = "0.1.0"
edition = "2021"
default-run = "http-server"
publish = false

# Because we use async closures:
rust-version = "1.85.0"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
device_controller = { workspace = true }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "test-util"] }
futures-util = "0.3.31"

[[bin]]
name = "http-server"
path = "src/main.rs"

[features]
dummy_device = ["device_controller/dummy_device"]
