[package]
name = "http-server"
version = "0.1.0"
edition = "2021"
default-run = "http-server"
publish = false

# Because we use async closures:
rust-version = "1.85.0"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
device_controller = { workspace = true }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full", "test-util"] }

[[bin]]
name = "http-server"
path = "src/main.rs"

[features]
dummy_device = ["device_controller/dummy_device"]
